retoque le head añadi los iconos de la barra de navegacion y los aplique y comenze el css

--- a/index.html
+++ b/index.html
@@ -4,23 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Esta pagina esta hecha con 3 amigos los cuales nos propusimos este proyecto en conjunto para lograrlo">
+    <meta name="keywords" content="intercambio, productos, objetos">
+    <meta name="description" content="esta pagina sera de intercambio de productos del mismo tipo sea muebles tecnologicos o cualquier otro objeto">
     <meta name="author" content="Christopher Chacón, Brian Gracia, Veronica Ascencio">
+    <style>@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');</style>
     <script src="https://kit.fontawesome.com/4d30898eec.js" crossorigin="anonymous"></script>
-    <link rel="favicon" href="imgs/Logo-Ventana.ico">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="favicon" href="imgs/Logo-Ventana.ico"> 
     <title>Shared-page</title>
 </head>
 <body>
     <header>
         <nav class="nav">
-            <ul class="nav__ul">
-                <li class="nav__li"></li>
-                <li class="nav__li"></li>
-                <li class="nav__li"></li>
-                <li class="nav__li"></li>
-            </ul>
+            <div class="container">
+                <ul class="nav__ul">
+                    <li class="nav__li"><i class="fas fa-house"></i><a href="#">Inicio</a></li>
+                    <li class="nav__li"><i class="fas fa-right-left"></i><a href="#">Intercambio</a></li>
+                    <li class="nav__li"><i class="fas fa-rotate-left"></i><a href="#">Rembolsos</a></li>
+                    <li class="nav__li"><i class="fas fa-id-card"></i><a href="#">Licencia</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
+
 </body>
 </html>
